# PrjWithCi

./: CMakeLists.txt  README.md  build.ci.sh  build.sh  vkMain.conf
3rd/avboost/include/boost/: avloop.hpp  consolestr.hpp
3rd/gentle-exit/: CMakeLists.txt  gentle-exit.c
cmake/: FindBoost.cmake
doc/: PrjWithCi.md
src/: CMakeLists.txt  main.cpp  sample.cpp
tasks.ci/: clean.sh  cov.sh  make.sh  ut.sh
ut/: CMakeLists.txt  fixture.Test.cpp  gtest_main.cpp  sample.Test.cpp  suite_level.h
